Chapter covers fixed & Prism fixed for React

--- a/src/docs/assets/scss/_prism-working.scss
+++ b/src/docs/assets/scss/_prism-working.scss
@@ -1,4 +1,4 @@
-/* http://prismjs.com/download.html?themes=prism&languages=markup+css+clike+javascript+bash+git+http+json+php+jsx+sass+scss&plugins=line-numbers */
+/* http://prismjs.com/download.html?themes=prism&languages=markup+css+clike+javascript+git+http+json+php+sass+scss&plugins=line-numbers */
 /**
  * prism.js default theme for JavaScript, CSS and HTML
  * Based on dabblet (http://dabblet.com)
@@ -12,7 +12,7 @@ pre[class*="language-"] {
 	text-shadow: 0 1px white;
 	font-family: Consolas, Monaco, 'Andale Mono', 'Ubuntu Mono', monospace;
 	text-align: left;
-	white-space: pre;
+	// white-space: pre;
 	word-spacing: normal;
 	word-break: normal;
 	word-wrap: normal;
@@ -145,7 +145,6 @@ pre.line-numbers {
 
 pre.line-numbers > code {
 	position: relative;
-    white-space: inherit;
 }
 
 .line-numbers .line-numbers-rows {
