--- a/src/docs/assets/scss/_typography.scss
+++ b/src/docs/assets/scss/_typography.scss
@@ -2,106 +2,111 @@ body {
     @include font-body;
 }
 
-code, pre {
+code,
+pre {
     @include font-monospace;
     white-space: pre-wrap;
 }
 
 /* stop things breaking in weird places */
 
-h1,h2,h3,h4 {
-	page-break-after: avoid;
-	page-break-inside:avoid;
+h1,
+h2,
+h3,
+h4 {
+    page-break-after: avoid;
+    page-break-inside: avoid;
 }
 
 
-h1+p, h2+p, h3+p {
-	page-break-before: avoid;
+h1 + p,
+h2 + p,
+h3 + p {
+    page-break-before: avoid;
 }
 
-.chapter-page{
-   page-break-inside: avoid;
+.chapter-page {
+    page-break-inside: avoid;
     page-break-after: always;
 }
 
-table, figure, .box {
-	page-break-inside: avoid;
+table,
+figure,
+.box {
+    page-break-inside: avoid;
 }
-.ch-page{
-    padding-top: 100px;
+
+
+
+.chapter {
+    padding-top: 0px;
+    page-break-before: always;
 }
- 
+
 .ch-head {
-  font-size: 21pt;
-  position: relative;
-  width: 25%;
-  font-family: 'Raleway';
-    outline: 1px blue dashed;
-    color:#ddd;
-  font-weight: 600;
-  //color: color(theme,blue);
-  margin-top: 0;
-  float: right;
-  text-align: left;
-  //padding: 300px 0rem 0;
-  page-break-after: never;
+    font-size: 21pt;
+    position: absolute;
+    width: 30%;
+    font-family: 'Raleway';
+    //outline: 1px blue dashed;
+    color: #aaa;
+    height: 200px;
+    font-weight: 600; //color: color(theme,blue);
+    margin-top: 25rem;
+    right: 0%;
+    text-align: center; 
+    page-break-after: avoid;
 }
 
-.ch-head::before { // the chapter number
-  content: counter(chapternum);
-  //color: color(theme,blue);
-  font-size: 120pt;
-    color:#444;
-  position: absolute;
-  padding-left: 20px;
-top: -20px;
-  height: 150px;
-  text-align: left;
-  width: 100%;
-  outline: 1px red dashed;
+.ch-head::before {
+    // the chapter number
+    content: counter(chapternum); //color: color(theme,blue);
+    font-size: 120pt;
+    color: #777;
+    position: absolute;
+    //padding-left: 20px;
+    top: -20px;
+    height: 150px;
+    left: 0;
+    text-align: center;
+    width: 100%;
+    //outline: 1px red dashed;
 }
-/*
-.ch-head::after {
-  content: "";
-  display: block;
-  clear: both;
-  position: absolute;
-  top: 120px;
-}*/
 
-.ch-head+h1 {
-    width: 65%;
+.ch-head + h1 {
+    margin-top: 28rem;
     font-size: 48px;
+    position: relative;
     float: right;
     border-right: 1px solid #999;
     line-height: 100%;
-    padding-right: 20px;
-    outline: 1px red dashed;
+    margin-right: 30%;
+    //outline: 1px red dashed;
     text-align: right;
-    position: relative;
-    //top: -300px;
+    padding-right: 2rem;
+    position: relative; //top: -300px;
     page-break-before: never; // stay connected to the author H3
-    page-break-after: never;
+    page-break-after: avoid;
 }
-.ch-head+h1+h3 { // Every chapter header needs a H3 following it to break the page. It can be empty if there is no author credit, but it must be there.
-    width: 65%;
+
+.ch-head + h1 + h3 {
+    // Every chapter header MUST BE followed by a H3 author which will then create the page break. It can be empty if there is no author credit, but it must be there.
+    
+    margin: 0 30% 3rem 0;
     font-size: 24px;
     line-height: 100%;
-    float: right;
-    padding-right: 20px;
+    padding-right: 2rem;
+    color: #999;
     text-align: right;
-    position: relative;
-    outline: 1px red dashed;
-    clear: right;
-    //top: -300px;
+    //outline: 1px red dashed;
     page-break-before: avoid;
     page-break-after: always;
 }
 
-.ch-head+h1+h3+*{
-    outline: 1px green dashed;
+.ch-head + h1 + h3 + * {
+    //outline: 1px green dashed;
     clear: both;
-    page-break-before: avoid;
+    page-break-before: always;
 }
 
 /*
@@ -131,24 +136,25 @@ h2 {
     line-height: .8;
 }
 */
+
 h2 code {
-  font-size: 90%;
+    font-size: 90%;
 }
 
 .front h2 {
-  color: color(theme, black);
-  //font-size: 14pt;
-  padding:0;
-  margin: 0;
-  border: none;
-  display: block;
-  line-height: 1.5;
+    color: color(theme, black); //font-size: 14pt;
+    padding: 0;
+    margin: 0;
+    border: none;
+    display: block;
+    line-height: 1.5;
 }
 
-.front h2+p {
-  margin-top:0;
-  padding-top: 0;
+.front h2 + p {
+    margin-top: 0;
+    padding-top: 0;
 }
+
 /*
 h3 {
   color: color(theme, black);
@@ -161,9 +167,11 @@ h3, h4, h5, h6 {
     font-size: 14pt;
 }
 */
+
 /* lists */
 
-ul, ol {
+ul,
+ol {
     padding-left: 0;
     margin-left: 0;
 }
